removed examples and fixed typo

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 .header {
   background-image: url("../images/Capitol_Building_Full_View.jpg");
-  /* Image sourced from Wikipedia, credit to Noclip. Image is in the public doman. */
+  /* Image sourced from Wikipedia, credit to Noclip. Image is in the public domain. */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
