--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,35 @@
   margin-top: 0;
   padding-bottom: 8px;
 }
+
+.all-legislators {
+  margin-left: 16px;
+  margin-right: 16px;
+}
+
+.legis-block {
+  background-color: #C8F7C5;
+  height: 216px;
+  margin-bottom: 30px;
+}
+
+.legis-block h3{
+  font-size: 20px;
+  margin: 12px;
+}
+
+.legis-block h4{
+  font-size: 16px;
+  margin: 12px;
+}
+
+.legis-block ul{
+  font-size: 14px;
+  margin: 12px;
+}
+
+.legis-block li{margin: 8px;}
+
+.legis-block p{
+  font-size: 12px;
+}
