--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,55 @@
+* {
+  box-sizing: border-box; }
+
+img {
+  width: 100%;
+  display: block; }
+
+/*  Bootstrap Clearfix */
+/*  Tablet  */
+@media (min-width: 767px) {
+  /* Column clear fix */
+  .col-lg-1:nth-child(12n+1),
+  .col-lg-2:nth-child(6n+1),
+  .col-lg-3:nth-child(4n+1),
+  .col-lg-4:nth-child(3n+1),
+  .col-lg-6:nth-child(2n+1),
+  .col-md-1:nth-child(12n+1),
+  .col-md-2:nth-child(6n+1),
+  .col-md-3:nth-child(4n+1),
+  .col-md-4:nth-child(3n+1),
+  .col-md-6:nth-child(2n+1) {
+    clear: none; }
+
+  .col-sm-1:nth-child(12n+1),
+  .col-sm-2:nth-child(6n+1),
+  .col-sm-3:nth-child(4n+1),
+  .col-sm-4:nth-child(3n+1),
+  .col-sm-6:nth-child(2n+1) {
+    clear: left; } }
+/*  Medium Desktop  */
+@media (min-width: 992px) {
+  /* Column clear fix */
+  .col-lg-1:nth-child(12n+1),
+  .col-lg-2:nth-child(6n+1),
+  .col-lg-3:nth-child(4n+1),
+  .col-lg-4:nth-child(3n+1),
+  .col-lg-6:nth-child(2n+1),
+  .col-sm-1:nth-child(12n+1),
+  .col-sm-2:nth-child(6n+1),
+  .col-sm-3:nth-child(4n+1),
+  .col-sm-4:nth-child(3n+1),
+  .col-sm-6:nth-child(2n+1) {
+    clear: none; }
+
+  .col-md-1:nth-child(12n+1),
+  .col-md-2:nth-child(6n+1),
+  .col-md-3:nth-child(4n+1),
+  .col-md-4:nth-child(3n+1),
+  .col-md-6:nth-child(2n+1) {
+    clear: left; } }
 #app-container {
-  font-family: 'Merriweather', serif;
-}
+  font-family: 'Merriweather', serif; }
 
 .header {
   background-image: url("../images/Capitol_Building_Full_View.jpg");
@@ -9,50 +58,44 @@
   background-position: center;
   background-repeat: no-repeat;
   color: #000000;
-  text-align: center;
-}
+  text-align: center; }
 
-.header h1{
-  background-color: rgba(255,255,255,.8);
+.header h1 {
+  background-color: rgba(255, 255, 255, 0.8);
   font-size: 48px;
   margin-bottom: 0;
-  padding: 8px;
-}
+  padding: 8px; }
 
-.header h2{
-  background-color: rgba(255,255,255,.8);
+.header h2 {
+  background-color: rgba(255, 255, 255, 0.8);
   margin-top: 0;
-  padding-bottom: 8px;
-}
+  padding-bottom: 8px; }
 
 .all-legislators {
   margin-left: 16px;
-  margin-right: 16px;
-}
+  margin-right: 16px; }
 
 .legis-block {
   background-color: #C8F7C5;
-  height: 216px;
-  margin-bottom: 30px;
-}
+  height: 240px;
+  margin-bottom: 30px; }
 
-.legis-block h3{
+.legis-block h3 {
   font-size: 20px;
-  margin: 12px;
-}
+  margin: 12px; }
 
-.legis-block h4{
+.legis-block h4 {
   font-size: 16px;
-  margin: 12px;
-}
+  margin: 12px; }
 
-.legis-block ul{
+.legis-block ul {
   font-size: 14px;
-  margin: 12px;
-}
+  margin: 12px; }
 
-.legis-block li{margin: 8px;}
+.legis-block li {
+  margin: 8px; }
 
-.legis-block p{
-  font-size: 12px;
-}
+.legis-block p {
+  font-size: 12px; }
+
+/*# sourceMappingURL=styles.css.map */
