--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,68 @@
 
 *{ box-sizing: border-box }
+
 img {
    width: 100%;
    display: block;
+}
+
+@import "./clearfix";
+
+#app-container {
+  font-family: 'Merriweather', serif;
+}
+
+.header {
+  background-image: url("../images/Capitol_Building_Full_View.jpg");
+  /* Image sourced from Wikipedia, credit to Noclip. Image is in the public domain. */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: #000000;
+  text-align: center;
+}
+
+.header h1{
+  background-color: rgba(255,255,255,.8);
+  font-size: 48px;
+  margin-bottom: 0;
+  padding: 8px;
+}
+
+.header h2{
+  background-color: rgba(255,255,255,.8);
+  margin-top: 0;
+  padding-bottom: 8px;
+}
+
+.all-legislators {
+  margin-left: 16px;
+  margin-right: 16px;
+}
+
+.legis-block {
+  background-color: #C8F7C5;
+  height: 240px;
+  margin-bottom: 30px;
+}
+
+.legis-block h3{
+  font-size: 20px;
+  margin: 12px;
+}
+
+.legis-block h4{
+  font-size: 16px;
+  margin: 12px;
+}
+
+.legis-block ul{
+  font-size: 14px;
+  margin: 12px;
+}
+
+.legis-block li{margin: 8px;}
+
+.legis-block p{
+  font-size: 12px;
 }
